--- a/serverA/src/main/resources/application.yml
+++ b/serverA/src/main/resources/application.yml
@@ -1,7 +1,8 @@
 spring:
   profiles:
-    #active: ${profile.env}
-    active: dev
+    active: #profile.env#
+    #active: #profile.env#
+    #active: dev
 mybatis:
   typeAliasesPackage: com.smt.bean
   mapperLocations: classpath:mapper/*.xml
