--- a/serverA/src/main/resources/application-dev.yml
+++ b/serverA/src/main/resources/application-dev.yml
@@ -4,3 +4,14 @@ spring:
       username: root
       password: root
       driver-class-name: com.mysql.jdbc.Driver
+
+logging:
+  level:
+    com.smt.dao: debug
+    
+    
+mybatis:
+  configuration:
+    cache-enabled: false
+    local-cache-scope: STATEMENT
+    
