--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.smt</groupId>
@@ -9,7 +8,7 @@
 
 	<modules>
 		<module>common</module>
-		<module>serverA</module> 
+		<module>serverA</module>
 		<module>serverB</module>
 		<module>bean</module>
 	</modules>
@@ -45,6 +44,7 @@
 			</properties>
 		</profile>
 	</profiles>
+	
 
 
 
@@ -66,8 +66,15 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<fork>true</fork>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
-
+	
 
 </project>
